--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-duckdb
+duckdb --pre --update
 loguru
 numpy
 pandas
@@ -6,5 +6,3 @@ tableauhyperapi
 datafusion
 psycopg2
 pyarrow
-polars
-pylance
